--- a/index.htm
+++ b/index.htm
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Scout_camp_web</title>
+    <title>Virtual Exhibition | Sri Lanka Scout Association</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" id="metaViewport"/>
-    <link rel="preload" href="script.js?v=1629049315596" as="script"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/r/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/l/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/u/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/d/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/f/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/b/2/0_0.jpg?v=1629049315596" as="image"/>
-	<link rel="preload" href="locale/en.txt?v=1629049315596" as="fetch" crossorigin="anonymous"/>
+    <link rel="shortcut icon" href="favicon.ico">
+	<link rel="icon" sizes="48x48 32x32 16x16" href="favicon.ico">
+	<link rel="apple-touch-icon" type="image/png" sizes="180x180" href="misc/icon180.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="misc/icon16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="misc/icon32.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="misc/icon192.png">
+	<link rel="manifest" href="manifest.json">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-config" content="browserconfig.xml">
+	<link rel="preload" href="script.js?v=1629109142087" as="script"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/r/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/l/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/u/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/d/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/f/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="media/panorama_335B8DA4_3E97_4B79_4196_C333DEE33AF7_0/b/2/0_0.jpg?v=1629109142087" as="image"/>
+	<link rel="preload" href="locale/en.txt?v=1629109142087" as="fetch" crossorigin="anonymous"/>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#FFFFFF"/>
-    <script src="lib/tdvplayer.js?v=1629049315596"></script>
-    <script src="script.js?v=1629049315596"></script>
+    <script src="lib/tdvplayer.js?v=1629109142087"></script>
+    <script src="script.js?v=1629109142087"></script>
     <script type="text/javascript">
         (function()
         {
             var isMobile = /(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows ce|xda|xiino|android|ipad|playbook|silk/i.test(navigator.userAgent||navigator.vendor||window.opera);
             var deviceType = isMobile ? 'mobile' : 'general';
-            var devicesUrl = {"general":"script_general.js?v=1629049315596","mobile":"script_mobile.js?v=1629049315596"};
+            var devicesUrl = {"mobile":"script_mobile.js?v=1629109142087","general":"script_general.js?v=1629109142087"};
             var url = deviceType in devicesUrl ? devicesUrl[deviceType] : devicesUrl['general'];
             if(typeof url == "object") {
                 var orient = this.window.innerWidth > window.innerHeight ? "landscape" : "portrait";
@@ -46,11 +55,11 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1629049315596');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1629049315596');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1629049315596');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1629109142087');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1629109142087');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1629109142087');
 
-            var devicesUrl = {"general":"script_general.js?v=1629049315596","mobile":"script_mobile.js?v=1629049315596"};
+            var devicesUrl = {"mobile":"script_mobile.js?v=1629109142087","general":"script_general.js?v=1629109142087"};
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -293,7 +302,7 @@
     
 </head>
 <body>
-    <div id="preloadContainer" style="background-color:rgba(255,255,255,1)"><div style="z-index: 4; position: absolute; left: 0%; top: 50%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Loading WSC virtual tour. Please wait...</SPAN></DIV></div></div></div>
+    <div id="preloadContainer" style="background-color:rgba(255,255,255,1)"><div style="z-index: 4; position: absolute; left: 0%; top: 50%; width: 100.00%; height: 10.00%"><div style="text-align:left; color:#000; "><DIV STYLE="text-align:center;"><SPAN STYLE="letter-spacing:0vmin; white-space:pre-wrap;color:#777777;font-size:1.67vmin;font-family:Arial, Helvetica, sans-serif;">Welcome to the Virtual Exhibition Stall of the Sri Lanka Scout Association. Please wait....</SPAN></DIV></div></div></div>
     <div id="viewer"></div>
 </body>
 </html>
